Use StandardCharsets.UTF_8 instead of String based UTF-8 for getting String bytes